Added responses types for auth controllers and annotations for documentation
