# src/controllers/auth.controllers.ts
@@ -1,9 +1,15 @@
-import { Post, Route, Tags, BodyProp } from 'tsoa';
+import { Post, Route, Tags, BodyProp, SuccessResponse, Response, Example } from 'tsoa';
 import { loginUser, registerUser } from '../database/auth.odm';
 import { AuthSchema } from '../models/interfaces/auth.interface';
 import { UserSchema } from '../models/interfaces/user.interface';
 import { LogInfo } from '../utils/Logger';
+import { AuthResponse } from '../utils/Responses';
 import { IAuthController } from './interfaces';
+
+const errorExample: AuthResponse = {
+  status: 400,
+  message: 'Something went wrong'
+};
 
 @Route('/api/auth')
 @Tags('AuthController')
@@ -17,10 +23,18 @@ export class AuthController implements IAuthController {
    * @returns Object with response status and confirmation or error message
    */
   @Post('/register')
-  public async registerUsers (@BodyProp('name') name: string,
+  @SuccessResponse(201, 'User registered successfully')
+  @Response<AuthResponse>(400, 'User registration failed', errorExample)
+  @Example({
+    status: 201,
+    message: 'User registered successfully'
+  })
+  public async registerUsers (
+    @BodyProp('name') name: string,
     @BodyProp('email') email: string,
     @BodyProp('password') password: string,
-    @BodyProp('age') age: number): Promise<any> {
+    @BodyProp('age') age: number
+  ): Promise<AuthResponse> {
     LogInfo('[/api/auth/register] Creating new user');
     if (name && email && password && age) {
       const newUser: UserSchema = {
@@ -43,11 +57,21 @@ export class AuthController implements IAuthController {
   /**
    * Endpoint to login
    * @param {string} email Email
-   * @param {string} password: Password
+   * @param {string} password Password
    * @returns Object with response status, User found and Token signed or response status and error message
    */
   @Post('/login')
-  public async loginUsers (@BodyProp('email') email: string, @BodyProp('password') password: string): Promise<any> {
+  @SuccessResponse(200, 'User logged successflully')
+  @Response<AuthResponse>(400, 'Something went wrong', errorExample)
+  @Example({
+    status: 200,
+    message: 'Welcome User',
+    token: 'tokenExample'
+  })
+  public async loginUsers (
+    @BodyProp('email') email: string,
+    @BodyProp('password') password: string
+  ): Promise<AuthResponse> {
     LogInfo(`[/api/auth/login] Trying to log: ${email}`);
     if (email && password) {
       const auth: AuthSchema = {
