# src/utils/Responses.ts
@@ -1,0 +1,8 @@
+export interface BasicResponse {
+  status: number,
+  message?: string
+}
+
+export interface AuthResponse extends BasicResponse {
+  token?: string
+}
